<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_homework_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cz.sucharda.homework.HomeworkDetailActivity"
    tools:showIn="@layout/activity_homework_detail">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chd_textView_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enter_title"
        android:ems="10"
        android:layout_below="@+id/chd_textView_title"
        android:layout_alignParentStart="true"
        android:id="@+id/chd_editText_title" />

    <TextView
        android:text="@string/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chd_editText_title"
        android:id="@+id/chd_textView_subject" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enter_subject"
        android:ems="10"
        android:layout_below="@+id/chd_textView_subject"
        android:layout_alignParentStart="true"
        android:id="@+id/chd_editText_subject" />

    <TextView
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chd_editText_subject"
        android:layout_alignParentStart="true"
        android:id="@+id/chd_textView_date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:text="@string/enter_date"
        android:ems="10"
        android:layout_below="@+id/chd_textView_date"
        android:layout_alignParentStart="true"
        android:id="@+id/chd_editText_date" />

    <CheckBox
        android:id="@+id/chd_checkBox_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finished"
        android:layout_below="@+id/chd_editText_date" />

</RelativeLayout>
